@@ -407,7 +407,7 @@ srv_denied=Toegang geweigerd.
 srv_connect=Communicatie met de server mislukt.
 srv_timeout=Timeout overschreden.
 srv_bind=Server loopt al of toegang ontzegd.
-srv_ports=Same server and event port specified.
+srv_ports=Port '%' was specified twice.
 srv_unknown=Onbekende host '%'.
 srv_start=Server is gestart.
 srv_stop=Server is gestopt.
