@@ -407,7 +407,7 @@ srv_denied=Access denied.
 srv_connect=Can't communicate with the server.
 srv_timeout=Timeout exceeded.
 srv_bind=Server is running or permission was denied.
-srv_ports=Same server and event port specified.
+srv_ports=Port '%' was specified twice.
 srv_unknown=Unknown host '%'.
 srv_start=Server was started.
 srv_stop=Server was stopped.
