@@ -407,7 +407,7 @@ srv_denied=Accès refusé.
 srv_connect=Pas de communication avec le serveur.
 srv_timeout=Délai expiré.
 srv_bind=Serveur déjà démarré ou permission refusée.
-srv_ports=Same server and event port specified.
+srv_ports=Port '%' was specified twice.
 srv_unknown=Unknown host '%'.
 srv_start=Serveur démarré.
 srv_stop=Serveur arrêté.
