@@ -403,12 +403,12 @@ in_notdropped=Index '%' konnte nicht gelöscht werden.
 in_notavl=Nicht verfügbar
 
 # Server Info
-srv_denied=Zugriff wurde verweigert.
-srv_connect=Server ist nicht erreichbar.
-srv_timeout=Prozess hat Time-Out überschritten.
-srv_bind=Server läuft, oder der Zugriff wurde untersagt.
-srv_ports=Identischer Server- und Event-Port.
-srv_unknown=Unbekannter Host '%'.
+srv_denied=Der Zugriff wurde verweigert.
+srv_connect=Der Server ist nicht erreichbar.
+srv_timeout=Überschreitung des Time-Outs.
+srv_bind=Der Server läuft, oder der Zugriff wurde untersagt.
+srv_ports=Der Port '%' wurde mehrfach angegeben.
+srv_unknown=Der Host '%' ist unbekannt.
 srv_start=Server wurde gestartet.
 srv_stop=Server wurde gestoppt.
 srv_user=Benutzer
