@@ -407,7 +407,7 @@ srv_denied=Accesso negato.
 srv_connect=Impossibile comunicare con il Server.
 srv_timeout=Il processo ha raggiunto il timeout.
 srv_bind=Il server sta lavorando o il permesso è stato negato.
-srv_ports=Same server and event port specified.
+srv_ports=Port '%' was specified twice.
 srv_unknown=Unknown host '%'.
 srv_start=Server è stato avviato.
 srv_stop=Server è stato spento.
