@@ -407,7 +407,7 @@ srv_denied=アクセスが拒否されました。
 srv_connect=サーバーと通信できません。
 srv_timeout=タイムアウトになりました。
 srv_bind=サーバーが既に起動しているか、権限が足りません。
-srv_ports=サーバーポートと同一のイベントポートが指定されました。
+srv_ports=Port '%' was specified twice.
 srv_unknown='%' は不明なホスト名です。
 srv_start=サーバーを開始しました。
 srv_stop=サーバーが停止しました。
