@@ -407,7 +407,7 @@ srv_denied=Access denied.
 srv_connect=Không liên lạc được với máy chủ.
 srv_timeout=Lệnh hỏi của bạn đã hết giới hạn thời gian.
 srv_bind=Máy chủ đang chạy hay không được phép.
-srv_ports=Same server and event port specified.
+srv_ports=Port '%' was specified twice.
 srv_unknown=Unknown host '%'.
 srv_start=Server was started.
 srv_stop=Server was stopped.
